# igmp_client

./: .gitignore  CMakeLists.txt  README.md  run_client.sh  run_gen.sh
.github/workflows/: build.yml
docs/: case_01_startup_reports.pcapng  case_02_add_cmd.pcapng  case_03_request_not_list_group_then_listed_and_reply.pcapng  case_03_startup_gen_query_request.pcapng
include/: cli.h  fsm.h  igmp.h  igmp_subscribe.h  utils.h
scripts/: gen_query.c  gen_query.py
src/: cli.c  fsm.c  gen_query.c  igmp.c  igmp_subscribe.c  main.c  net.c  utils.c
